@@ -1,3 +1,8 @@
+2005-06-25  Erez Zadok  <ezk@garak.fsl.cs.sunysb.edu>
+
+	* conf/mtab/mtab_linux.c (rewrite_mtab): variable declarations
+	must come before C code.
+
 2005-06-25  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* conf/mtab/mtab_linux.c: Linux-specific mount table hanlding
